// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-phonefield default 1`] = `
<div
  class="m-phonefield"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      class="m-dropdown m-phonefield__country"
      style="width: 592px;"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="width: 100%;"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__body"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__left-content"
            >
              <!---->
               
              <input
                aria-controls="mDropdown-uuid-controls"
                aria-haspopup="true"
                class="m-dropdown__input"
                id="mDropdown-uuid"
                readonly="readonly"
                type="text"
              />
               
              <!---->
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-dropdown__arrow__icon"
                  height="16px"
                  width="16px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-validation-message m-dropdown__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-label m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <label
          class="m-input-style__label"
          for="mIntegerfield-uuid"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Numéro de téléphone
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__body"
        >
          <!---->
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-phonefield__input"
              id="mIntegerfield-uuid"
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          />
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="m-phonefield__example"
    style="margin-left: 592px;"
  >
    Ex: +1 506 234 5678
  </p>
   
  <div
    class="m-phonefield__validation"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-phonefield disabled 1`] = `
<div
  class="m-phonefield m--is-disabled"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      class="m-dropdown m-phonefield__country m--is-disabled"
      style="width: 592px;"
    >
      <div
        class="m-input-style m--is-disabled m--has-cursor-pointer m--has-value m--is-tag-default"
        style="width: 100%;"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__body"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__left-content"
            >
              <!---->
               
              <input
                aria-controls="mDropdown-uuid-controls"
                aria-haspopup="true"
                class="m-dropdown__input"
                disabled="disabled"
                id="mDropdown-uuid"
                readonly="readonly"
                type="text"
              />
               
              <!---->
               
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            />
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-validation-message m-dropdown__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--is-disabled m--has-label m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <label
          class="m-input-style__label"
          for="mIntegerfield-uuid"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Numéro de téléphone
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__body"
        >
          <!---->
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-phonefield__input"
              disabled="disabled"
              id="mIntegerfield-uuid"
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          />
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="m-phonefield__example"
    style="margin-left: 592px;"
  >
    Ex: +1 506 234 5678
  </p>
   
  <div
    class="m-phonefield__validation"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-phonefield error 1`] = `
<div
  class="m-phonefield m--has-error"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      class="m-dropdown m-phonefield__country"
      style="width: 592px;"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-error m--has-value m--is-tag-default"
        style="width: 100%;"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__body"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__left-content"
            >
              <!---->
               
              <input
                aria-controls="mDropdown-uuid-controls"
                aria-haspopup="true"
                class="m-dropdown__input"
                id="mDropdown-uuid"
                readonly="readonly"
                type="text"
              />
               
              <!---->
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-dropdown__arrow__icon"
                  height="16px"
                  width="16px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-validation-message m-dropdown__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-error m--has-label m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <label
          class="m-input-style__label"
          for="mIntegerfield-uuid"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Numéro de téléphone
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__body"
        >
          <!---->
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-phonefield__input"
              id="mIntegerfield-uuid"
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          />
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="m-phonefield__example"
    style="margin-left: 592px;"
  >
    Ex: +1 506 234 5678
  </p>
   
  <div
    class="m-phonefield__validation"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-phonefield error message 1`] = `
<div
  class="m-phonefield m--has-error m--has-validation-message"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      class="m-dropdown m-phonefield__country"
      style="width: 592px;"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-error m--has-value m--is-tag-default"
        style="width: 100%;"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__body"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__left-content"
            >
              <!---->
               
              <input
                aria-controls="mDropdown-uuid-controls"
                aria-haspopup="true"
                class="m-dropdown__input"
                id="mDropdown-uuid"
                readonly="readonly"
                type="text"
              />
               
              <!---->
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-dropdown__arrow__icon"
                  height="16px"
                  width="16px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-validation-message m-dropdown__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-error m--has-label m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <label
          class="m-input-style__label"
          for="mIntegerfield-uuid"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Numéro de téléphone
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__body"
        >
          <!---->
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-phonefield__input"
              id="mIntegerfield-uuid"
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          />
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="m-phonefield__example"
    style="margin-left: 592px;"
  >
    Ex: +1 506 234 5678
  </p>
   
  <div
    class="m-phonefield__validation"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error message
        </span>
      </p>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-phonefield waiting 1`] = `
<div
  class="m-phonefield m--is-waiting"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      class="m-dropdown m-phonefield__country m--is-waiting"
      style="width: 592px;"
    >
      <div
        class="m-input-style m--is-waiting m--has-cursor-pointer m--has-value m--is-tag-default"
        style="width: 100%;"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__body"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__left-content"
            >
              <!---->
               
              <input
                aria-controls="mDropdown-uuid-controls"
                aria-haspopup="true"
                class="m-dropdown__input"
                disabled="disabled"
                id="mDropdown-uuid"
                readonly="readonly"
                type="text"
              />
               
              <!---->
               
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            />
             
            <div
              class="m-spinner m-input-style__spinner"
            >
              <!---->
               
              <div />
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="m-validation-message m-dropdown__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--is-waiting m--has-label m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <label
          class="m-input-style__label"
          for="mIntegerfield-uuid"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Numéro de téléphone
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__body"
        >
          <!---->
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-phonefield__input"
              disabled="disabled"
              id="mIntegerfield-uuid"
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          />
           
          <div
            class="m-spinner m-input-style__spinner"
          >
            <!---->
             
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="m-phonefield__example"
    style="margin-left: 592px;"
  >
    Ex: +1 506 234 5678
  </p>
   
  <div
    class="m-phonefield__validation"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
